<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/titleG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/grammartitle"
                android:textSize="30sp"
                android:textColor="#A71212"/>

            <TextView
                android:id="@+id/intro1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleG"
                android:layout_marginTop="21dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/grammarintro"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="#0B0B0B"/>

            <TextView
                android:id="@+id/intro2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro1"
                android:layout_marginTop="5dp"
                android:text="@string/englishtitle"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:textColor="#A71212"/>

            <TextView
                android:id="@+id/intro3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro2"
                android:layout_marginTop="9dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/englishinto"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="#0B0B0B"/>
            <Button
                android:id="@+id/startb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro3"
                android:text="@string/startLearning"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/buttonrad"
                android:padding="20dp"/>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>